@@ -1,1 +1,2 @@
-The page you were looking for was not found!
+<h3>You broke it!</h3>
+<p>Just kidding. The page you were looking for has run away. Contact the site admin if you think this is an error.<p>
